# Danjin

./: .gitignore  .gitmodules  CMakeLists.txt  build-engine.sh  build-examples.sh  clean.sh
assets/shaders/: default.vert
examples/: CMakeLists.txt  ExampleApp.cpp
examples/assets/shaders/: basic_window.vert
src/: Danjin.h  pch.h
src/Danjin/: Application.cpp  Application.hpp  EntryPoint.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  Window.hpp  common.h
src/Danjin/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Danjin/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
submodules/glad/: glad.c  glad.h
submodules/imgui/: imgui_impl_opengl3.cpp
